# market-ai-platform

./: .env.example  Makefile  README.md  docker-compose.yml  environment.yml  proposal.md  pyproject.toml  pytest.ini  tasks.md
.github/: pull_request_template.md
.github/workflows/: _build-service.yml  build-dataset-platform.yml  build-eval-control-plane.yml  build-inference-gateway.yml  build.yml  ci.yml  lint.yml  test.yml
configs/datasets/: daily_equities_v1.yaml
configs/eval/: default.yaml  regime_slices.yaml
configs/features/: liquidity.yaml  returns.yaml  volatility.yaml
configs/models/: xgb_alpha_v1.yaml
configs/sources/: macro.yaml  prices.yaml
docs/api/: dataset-api.md  eval-api.md  inference-api.md
docs/architecture/: dataset-platform.md  eval-control-plane.md  inference-gateway.md  system-overview.md
docs/runbooks/: backfill.md  drift-alert-triage.md  model-rollout.md  stale-data-incident.md
infra/docker/: dataset-platform.Dockerfile  eval-control-plane.Dockerfile  inference-gateway.Dockerfile  worker.Dockerfile
infra/local/: init-db.sql  prometheus.yml  seed-data.sh
libs/common/: __init__.py  exceptions.py  ids.py  logging.py  settings.py  time.py
libs/contracts/: __init__.py  dataset.py  eval_spec.py  feature_store.py  model_registry.py
libs/eval/: __init__.py  drift.py  metrics.py  regressions.py  reports.py  slices.py
libs/features/: __init__.py  event.py  joins.py  liquidity.py  (+2 more)
scripts/: backfill_daily.sh  benchmark_inference.py  bootstrap.sh  replay_market_day.py  run_local_stack.sh  seed_sample_data.sh
tests/: conftest.py
(+70 files in other folders)
