[project]
name = "market-ai-platform"
version = "0.1.0"
description = "Market AI Platform — data plane, inference plane, eval/control plane"
authors = [{name = "Kyle Nguyen"}]
requires-python = ">=3.11"

# Runtime deps are managed via environment.yml (mamba).
# This section is kept minimal for editable installs (`pip install -e .`).
dependencies = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["libs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "services", "libs"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --tb=short"
